fix saveToSeerver visibility only when authenticated

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,7 +32,7 @@ figcaption {
 
 a {
 	display: inline;
-	color: rgb(144, 182, 214);
+	color: rgba(220, 38, 38, .9);
 	font-weight: 900;
 }
 
